--- a/src/pages/Hotels.module.css
+++ b/src/pages/Hotels.module.css
@@ -1,14 +1,17 @@
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 5px;
+  grid-auto-rows: 1fr;
+  gap: 20px;
 }
 
 .element {
-  border: 1px solid beige;
+  border: 1px solid #9d0208;
+  border-radius: 20px;
   padding: 5px;
 }
 
 .element:hover {
-  background-color: beige;
+  background-color: #9d0208;
+  color: white;
 }
