--- a/src/pages/Hotels.module.css
+++ b/src/pages/Hotels.module.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-auto-rows: 1fr;
   gap: 20px;
 }
@@ -14,4 +14,16 @@
 .element:hover {
   background-color: #9d0208;
   color: white;
+}
+
+@media (min-width: 481px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 769px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
